Fix contrast issues

--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -21,7 +21,7 @@
 @mixin indicatorcards {
   .indicator-cards {
     a {
-      color: black;
+      // color: black;
       padding: 1rem;
       display: inline-block;
       -webkit-transition: background 0.3s;
